@@ -1,3 +1,7 @@
+2019-11-04 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/dialogs/geda_file_chooser.c: Rename macro; ChooseClass -> ChooserClass
+
 2019-10-22 Wiley E. Hill <wileyhill@gmail.com>
 
     * src/widgets/geda_bulb.c: Add Doxygen code/endcode tags in
